# dss-vdc-venta

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  acinclude.m4  configure.ac
venta/: Makefile.am  configuration.c  icons.c  main.c  network.c  util.c  vdsd.c  venta.cfg.sample  venta.h
